--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section>
+					<code> Sample
+					few code
+					of lines</code>
+				</section>
 				<section>Slide 2</section>
 			</div>
 		</div>
