update images directory usage

--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 
             <h3>Flutter project types:</h3>
             <ul>
-                <li class="fragment"><strong>Application</strong> => end users</li>
-                <li class="fragment"><strong>Plugin</strong> => library with native implementations</li>
-                <li class="fragment"><strong>Package</strong> => pure Dart component, like new Widget</li>
-                <li class="fragment"><strong>Module</strong> => to be used on Android or iOS as a component</li>
+                <li class="fragment"><strong>Application</strong> &#8594; end users</li>
+                <li class="fragment"><strong>Plugin</strong> &#8594; library with native implementations</li>
+                <li class="fragment"><strong>Package</strong> &#8594; pure Dart component, like new Widget</li>
+                <li class="fragment"><strong>Module</strong> &#8594; to be used on Android or iOS as a component</li>
             </ul>
         </section>
         <section>
@@ -140,11 +140,11 @@
 
                 <h3>IDEs</h3>
 
-                <img class="fragment no-border" data-src="/images/as_icon.png" height="200" width="200">
-                <img class="fragment no-border" data-src="/images/vs_code_icon.png" height="200" width="200">
+                <img class="fragment no-border" data-src="images/as_icon.png" height="200" width="200">
+                <img class="fragment no-border" data-src="images/vs_code_icon.png" height="200" width="200">
 
                 <h3 class="fragment">or</h3>
-                <img class="fragment no-border" data-src="/images/terminal_icon.png" height="200" width="200">
+                <img class="fragment no-border" data-src="images/terminal_icon.png" height="200" width="200">
 
                 <aside class="notes" data-markdown>
                     * IDEs giving us user friendly UI
@@ -154,7 +154,7 @@
 
             <section>
                 <h3>Android Studio</h3>
-                <img data-src="/images/as_icon.png" height="200" width="200">
+                <img data-src="images/as_icon.png" height="200" width="200">
                 <pre>
                     <code class="plaintext" data-trim data-noescape>
                         File
@@ -165,17 +165,17 @@
             </section>
             <section>
                 <h3>Visual Studio Code</h3>
-                <img data-src="/images/vs_code_icon.png" height="200" width="200">
+                <img data-src="images/vs_code_icon.png" height="200" width="200">
                 <pre>
                     <code class="plaintext" data-trim data-noescape>
-                        Start Command Palette [Cmd shift P]
+                        Start Command Palette [Cmd] [shift] [P]
                         Type: 'Flutter: New Project' (Only Flutter Application)
                     </code>
                 </pre>
             </section>
             <section>
                 <h3>Terminal</h3>
-                <img data-src="/images/terminal_icon.png" height="200" width="200">
+                <img data-src="images/terminal_icon.png" height="200" width="200">
                 <pre>
                     <code class="plaintext" data-trim data-noescape>
                         All options available here
@@ -188,7 +188,7 @@
         <section>
             <section>
                 <h3>Let's do something serious now</h3>
-                <img class="fragment no-border" data-src="/images/cat_serious.gif">
+                <img class="fragment no-border" data-src="images/cat_serious.gif">
             </section>
 
             <section>
@@ -220,22 +220,22 @@
 
             <section>
                 <h4>Plugin project overview</h4>
-                <img class="no-border" data-src="/images/ss_overview_plugin.png">
+                <img class="no-border" data-src="images/ss_overview_plugin.png">
             </section>
 
             <section>
                 <h4>Android project overview</h4>
-                <img class="no-border" data-src="/images/ss_overview_android.png">
+                <img class="no-border" data-src="images/ss_overview_android.png">
             </section>
 
             <section>
                 <h4>iOS project overview</h4>
-                <img class="no-border" data-src="/images/ss_overview_ios.png">
+                <img class="no-border" data-src="images/ss_overview_ios.png">
             </section>
 
             <section>
                 <h4>Example project overview</h4>
-                <img class="no-border" data-src="/images/ss_overview_example.png">
+                <img class="no-border" data-src="images/ss_overview_example.png">
             </section>
 
             <section>
@@ -636,8 +636,8 @@ Widget build(BuildContext context) {
             <section>
                 <h3>Does this work?</h3>
                 <div class="fragment">
-                    <img class="no-border" data-src="/images/ss_ios1.png" height="500">
-                    <img class="no-border" data-src="/images/ss_android1.jpg" height="500">
+                    <img class="no-border" data-src="images/ss_ios1.png" height="500">
+                    <img class="no-border" data-src="images/ss_android1.jpg" height="500">
                 </div>
             </section>
 
@@ -647,7 +647,7 @@ Widget build(BuildContext context) {
             <section>
                 <h3>Should I pour more?</h3>
                 <h3> Maybe a stream?</h3>
-                <img class="no-border" data-src="/images/more.gif">
+                <img class="no-border" data-src="images/more.gif">
             </section>
 
             <section>
@@ -665,14 +665,14 @@ Widget build(BuildContext context) {
         </section>
 
         <section>
-            <img class="no-border" data-src="/images/no_more.gif" >
+            <img class="no-border" data-src="images/no_more.gif" >
         </section>
 
         <section>
             <h2>Thank you!</h2>
 
             <br>
-            <img class="no-border" data-src="/images/qr.png" ><br/>
+            <img class="no-border" data-src="images/qr.png" ><br/>
             <span>jacqqq.github.io/in_mobile</span><br/>
 
             <span>pub.dev/battery_state_reader</span>
