move, dates first

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
             <section>
                 <h3>Timeline</h3>
-                <p class="fragment">First version of flutter framework was released in 2015</p>
-                <p class="fragment">Flutter 1.0 - December 4th, 2018, the first "stable" version of the Framework.</p>
-                <p class="fragment">FLutter 1.12 - December 2019 (Current version)</p>
+                <p class="fragment">2015 First version of flutter framework was released</p>
+                <p class="fragment">2018, December 4th Flutter 1.0 - "stable" version of the Framework.</p>
+                <p class="fragment">2019, December Flutter 1.12 (Current version)</p>np
             </section>
 
             <section>
